# agent_openai

./: README.md  pyproject.toml
src/agent_openai/: crew.py  main.py
src/agent_openai/config/: agents.yaml  tasks.yaml
src/agent_openai/tools/: __init__.py  mongodb_tool.py
